[package]
name = "make-a-game"
version = "0.1.0"
edition = "2021"

[dependencies]
# bevy = "0.13"
bevy = { version = "0.13", features = ["dynamic_linking"] }
bevy_rapier2d = { version = "0.25", features = [ "simd-stable", "parallel", "debug-render-2d" ] }
bevy_math = "0.13"
derive_more = "0.99"
rand = "0.8"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3