[package]
name = "make-a-game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13"
bevy_rapier2d = { version = "0.25", features = [
    "wasm-bindgen",
    "debug-render-2d",
    "simd-stable",
    "debug-render-2d",
] }
derive_more = "0.99"
rand = "0.8"
wasm-bindgen = "0.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[lib]
crate-type = ["cdylib", "rlib"]

[features]
parallel = ["bevy_rapier2d/parallel"]
dyn = ["bevy/dynamic_linking"]
